--- a/eyantrasim/CMakeLists.txt
+++ b/eyantrasim/CMakeLists.txt
@@ -7,6 +7,8 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(eyantrasim_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -26,8 +28,12 @@ endif()
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME})
   
-install(PROGRAMS include/eyantrasim/eyantrasim_node
-  DESTINATION lib/${PROJECT_NAME}
+install(PROGRAMS 
+include/eyantrasim/eyantrasim_node
+  scripts/sim_control.py
+
+
+DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
