fix:eyantrasim Cmakelists updated
Signed-off-by: Srivenkateshwar <srivenkateshwar@e-yantra.org>

--- a/eyantrasim/CMakeLists.txt
+++ b/eyantrasim/CMakeLists.txt
@@ -7,8 +7,8 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(eyantrasim_msgs)
 find_package(rclpy REQUIRED)
-find_package(eyantrasim_msgs REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -29,11 +29,9 @@ install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME})
   
 install(PROGRAMS 
-include/eyantrasim/eyantrasim_node
+  include/eyantrasim/eyantrasim_node
   scripts/sim_control.py
-
-
-DESTINATION lib/${PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 ament_package()
